[gd_scene load_steps=36 format=3 uid="uid://s77jcnwyfctw"]

[ext_resource type="Script" path="res://GUI/DeathScreen.gd" id="1_wwlhg"]
[ext_resource type="Texture2D" uid="uid://ie6g3tqomdw2" path="res://Shared/player_death.png" id="2_kkdnq"]
[ext_resource type="Texture2D" uid="uid://c7bnjhfmyp606" path="res://Shared/drone.png" id="3_r3vlu"]
[ext_resource type="Texture2D" uid="uid://lggjn408erib" path="res://Shared/battery.png" id="4_1pijx"]
[ext_resource type="Texture2D" uid="uid://bwd2uf7jgu58f" path="res://Shared/export/s4m_ur4i_factory-o-pixelart_tileset.png" id="5_bqyya"]
[ext_resource type="Theme" uid="uid://weaopiyujqgb" path="res://Shared/PixelTheme/pixel_theme.tres" id="6_blt6l"]
[ext_resource type="AudioStream" uid="uid://cflgrnvwvvrq5" path="res://Shared/sfx/wobbledown.wav" id="7_gntyw"]
[ext_resource type="AudioStream" uid="uid://3cpxhypmuhbw" path="res://Shared/sfx/wobbledown2.wav" id="7_vp82y"]
[ext_resource type="AudioStream" uid="uid://d1385p81okf70" path="res://Shared/Music/SpaceShooterMusic/Victory Tune.ogg" id="8_xn7tb"]
[ext_resource type="AudioStream" uid="uid://3ldrmjeba5np" path="res://Shared/sfx/wobbleup2.wav" id="9_lanhk"]
[ext_resource type="AudioStream" uid="uid://qi5n5f8whyhu" path="res://Shared/sfx/hit1.wav" id="11_l6kdu"]
[ext_resource type="AudioStream" uid="uid://ciouy57ns22o6" path="res://Shared/sfx/hit3.wav" id="12_x1inh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6tvxo"]
atlas = ExtResource("2_kkdnq")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_txfta"]
atlas = ExtResource("2_kkdnq")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdeyv"]
atlas = ExtResource("2_kkdnq")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fmg2d"]
atlas = ExtResource("2_kkdnq")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxcya"]
atlas = ExtResource("2_kkdnq")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_18hd0"]
atlas = ExtResource("2_kkdnq")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cnn0"]
atlas = ExtResource("2_kkdnq")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x87qb"]
atlas = ExtResource("2_kkdnq")
region = Rect2(112, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_gkbwy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tvxo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_txfta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdeyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fmg2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxcya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_18hd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cnn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x87qb")
}],
"loop": false,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vmdk5"]
atlas = ExtResource("3_r3vlu")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c0rqk"]
atlas = ExtResource("3_r3vlu")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph7ii"]
atlas = ExtResource("3_r3vlu")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7xhy"]
atlas = ExtResource("3_r3vlu")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytmxp"]
atlas = ExtResource("3_r3vlu")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfe7i"]
atlas = ExtResource("3_r3vlu")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_guhhq"]
atlas = ExtResource("3_r3vlu")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6yn3"]
atlas = ExtResource("3_r3vlu")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_we1b1"]
atlas = ExtResource("3_r3vlu")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xfby4"]
atlas = ExtResource("3_r3vlu")
region = Rect2(144, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_o5okt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmdk5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c0rqk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph7ii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7xhy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytmxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfe7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_guhhq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6yn3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_we1b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xfby4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_bpuaj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Drone/Battery:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone/Rope:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(157, 76)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Drone/Battery:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(161, 88)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Drone/Rope:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1e-05)]
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drone:position:x")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone:position:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/6/type = "bezier"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("MarginContainer/VBoxContainer/RichTextLabel:visible_ratio")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Player:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 2)]
}

[sub_resource type="Animation" id="Animation_5n5eh"]
resource_name = "death"
length = 12.0
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"default", 1.0, false],
"method": &"play"
}]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Drone")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [&"default", 1.0, false],
"method": &"play"
}]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Background:color")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Drone/Battery:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Drone/Rope:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(-4, 5), Vector2(-4, 9), Vector2(-4, 6.6)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Drone/Battery:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(6, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 12), Vector2(0, 8)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Drone/Rope:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(5, 6, 7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1e-05), Vector2(1, 0.8), Vector2(1, 0.400008)]
}
tracks/7/type = "bezier"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Drone:position:x")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(8, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.0999999, 61.5, 161, -0.5, -4.5, 0.25, 0, 161, -0.25, 0, 0.25, 0, 161, -0.25, 0, 0.49, 9.5, 340, -0.11, -51.5, 0.25, 0),
"times": PackedFloat32Array(0, 4, 5, 5.0001, 7, 8)
}
tracks/8/type = "bezier"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Drone:position:y")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.0999999, 60.5, 70, -0.31, -22.5, 0.20756, 3.5, 70.5, -0.25, 0, 0.25, 0, 70, -0.2609, 3.5, 0.29, -21.5, 1, -0.11, 58.5, 0.25, 0),
"times": PackedFloat32Array(0, 4, 5, 6, 7, 8)
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("MarginContainer/VBoxContainer/RetryButton:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 11.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("MarginContainer/VBoxContainer/MainMenuButton:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 11.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/11/type = "bezier"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("MarginContainer/VBoxContainer/RichTextLabel:visible_ratio")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(-0.2, 8, 9.5)
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Player:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(2, 2)]
}
tracks/13/type = "method"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("VictoryMusic")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(7.9),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.0],
"method": &"play"
}]
}
tracks/14/type = "method"
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/path = NodePath("Drone/AudioStreamPlayer")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/keys = {
"times": PackedFloat32Array(4, 7),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/15/type = "value"
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/path = NodePath("Drone/AudioStreamPlayer:stream")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/keys = {
"times": PackedFloat32Array(3.9, 6.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [ExtResource("7_vp82y"), ExtResource("9_lanhk")]
}
tracks/16/type = "method"
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/path = NodePath("PlayerDeathSound")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/keys = {
"times": PackedFloat32Array(0, 2.5, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"values": [{
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}, {
"args": [0.0],
"method": &"play"
}]
}
tracks/17/type = "value"
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/path = NodePath("PlayerDeathSound:stream")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/keys = {
"times": PackedFloat32Array(0, 2.4, 3.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [ExtResource("7_gntyw"), ExtResource("11_l6kdu"), ExtResource("12_x1inh")]
}
tracks/18/type = "value"
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/path = NodePath("MarginContainer/VBoxContainer/RichTextLabel2:visible_ratio")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/keys = {
"times": PackedFloat32Array(0, 10, 11.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ecpwk"]
_data = {
"RESET": SubResource("Animation_bpuaj"),
"death": SubResource("Animation_5n5eh")
}

[node name="DeathScreen" type="MarginContainer"]
process_mode = 3
theme = ExtResource("6_blt6l")
script = ExtResource("1_wwlhg")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(330, 190)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="Player" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 90)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_gkbwy")
frame = 7
frame_progress = 1.0

[node name="Drone" type="AnimatedSprite2D" parent="."]
position = Vector2(8, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_o5okt")
frame_progress = 0.372501

[node name="Battery" type="Sprite2D" parent="Drone"]
position = Vector2(161, 88)
texture = ExtResource("4_1pijx")

[node name="Rope" type="Sprite2D" parent="Drone"]
self_modulate = Color(1, 0.917647, 0, 1)
position = Vector2(157, 76)
scale = Vector2(1, 1e-05)
texture = ExtResource("5_bqyya")
region_enabled = true
region_rect = Rect2(16, 208, 8, 8)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Drone"]
stream = ExtResource("9_lanhk")
pitch_scale = 0.4

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(80, 130)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_blt6l")
theme_override_colors/default_color = Color(1, 0.65098, 0, 1)
theme_override_colors/font_shadow_color = Color(1, 0, 0, 0.305882)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_constants/line_separation = -12
theme_override_font_sizes/normal_font_size = 13
bbcode_enabled = true
text = "[p align=center]MISSION ACCOMPLISHED!

mortality rate:  
within acceptable range"
fit_content = true
autowrap_mode = 0
visible_characters_behavior = 1

[node name="RichTextLabel2" type="RichTextLabel" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("6_blt6l")
theme_override_colors/default_color = Color(0.996094, 0.648438, 0, 1)
theme_override_colors/font_shadow_color = Color(0.513726, 0, 0, 0.380392)
theme_override_colors/font_outline_color = Color(0.515625, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
bbcode_enabled = true
text = "[p align=center]Extracted Resources: 100000"
fit_content = true
autowrap_mode = 0
visible_characters_behavior = 1

[node name="RetryButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 5
text = "Retry"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 5
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ecpwk")
}

[node name="VictoryMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_xn7tb")

[node name="PlayerDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_x1inh")
pitch_scale = 0.2
